--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,10 @@ input {
 ::placeholder {
   font-size: 12px;
 }
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
